[gd_scene load_steps=6 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/title/StageSelect.gd" type="Script" id=2]
[ext_resource path="res://objects/title/SubMenus/StageSelectPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/FontVerdanaSmaller.tres" type="DynamicFont" id=7]
[ext_resource path="res://sprites/misc/mapselect/postcardrandom.png" type="Texture" id=8]

[node name="StageSelect" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 23.0
margin_right = 30.0
margin_bottom = 35.0
text = "Map Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -30.0
margin_right = -10.0
margin_bottom = -10.0
text = "Close"

[node name="Margin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -84.5
margin_right = 179.0
margin_bottom = 58.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Margin"]
margin_left = 28.0
margin_right = 328.0
margin_bottom = 219.0
size_flags_horizontal = 4
custom_constants/vseparation = 15
custom_constants/hseparation = 30
columns = 3

[node name="factory" parent="Margin/Grid" instance=ExtResource( 3 )]

[node name="desert" parent="Margin/Grid" instance=ExtResource( 3 )]
margin_left = 110.0
margin_right = 190.0

[node name="beach" parent="Margin/Grid" instance=ExtResource( 3 )]
margin_left = 220.0
margin_right = 300.0

[node name="lab" parent="Margin/Grid" instance=ExtResource( 3 )]
margin_top = 78.0
margin_bottom = 141.0

[node name="mines" parent="Margin/Grid" instance=ExtResource( 3 )]
margin_left = 110.0
margin_top = 78.0
margin_right = 190.0
margin_bottom = 141.0

[node name="StageRandom" type="VBoxContainer" parent="Margin/Grid"]
margin_left = 220.0
margin_top = 78.0
margin_right = 300.0
margin_bottom = 141.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Margin/Grid/StageRandom"]
margin_right = 80.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 7 )
text = "Random"
align = 1

[node name="TextureRect" type="TextureRect" parent="Margin/Grid/StageRandom"]
margin_top = 15.0
margin_right = 80.0
margin_bottom = 63.0
size_flags_vertical = 0
texture = ExtResource( 8 )

[node name="StageRandom" type="Button" parent="Margin/Grid/StageRandom/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Desc" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.5
margin_top = -26.0
margin_right = 114.5
margin_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
text = "Hover over a stage to see its description!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescTimer" type="Timer" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_StageSelect_visibility_changed"]
[connection signal="button_up" from="Close" to="." method="_on_Close_button_up"]
[connection signal="button_up" from="Margin/Grid/StageRandom/TextureRect/StageRandom" to="." method="_on_StageRandom_button_up"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="DescTimer" to="." method="_on_DescTimer_timeout"]
